Started coding group request view

--- a/GroupUp/Views/Shared/_Layout.cshtml
+++ b/GroupUp/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - ASP.NET Uygulamam</p>
+            <p>&copy; @DateTime.Now.Year - GroupUp</p>
         </footer>
     </div>
 
