--- a/GroupUp/Views/Shared/_Navbar.cshtml
+++ b/GroupUp/Views/Shared/_Navbar.cshtml
@@ -10,8 +10,8 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Group Requests", "Index", "Home")</li>
-                <li>@Html.ActionLink("My Groups", "About", "Home")</li>
+                <li>@Html.ActionLink("Group Requests", "Requests", "Groups")</li>
+                <li>@Html.ActionLink("My Groups", "UserGroups", "Groups")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
