UsersController & UserDetails added, MemberDetails added, some changes in GroupDetails view & viewModel

--- a/GroupUp/Views/Groups/Details.cshtml
+++ b/GroupUp/Views/Groups/Details.cshtml
@@ -19,7 +19,7 @@ else
         @foreach (var usr in @Model.Group.Members)
         {
             <li>
-                @usr.UserId
+                @usr.AspNetIdentity.UserName
             </li>
         }
     </ul>
