--- a/GroupUp/Views/Groups/UserGroups.cshtml
+++ b/GroupUp/Views/Groups/UserGroups.cshtml
@@ -17,7 +17,7 @@
             <hr />
             <div>
                 <h3> @group.Title</h3>
-                <p> @(group.Description.Substring(0, 10) + ((group.Description.Length <= 10) ? null : "..."))</p>
+                <p> @group.Description</p>
                 <p> @group.Members.Count users in this group</p>
                 <p> @(group.MaxUserCapacity - group.Members.Count) free spots in this group</p>
                 @Html.ActionLink("View Group →", "Details", "Groups", new { id = group.GroupId }, new { @class = "btn btn-primary" })
@@ -39,7 +39,7 @@
             <hr />
             <div>
                 <h3> @group.Title</h3>
-                <p> @(group.Description.Substring(0, 10) + ((group.Description.Length <= 10) ? null : "..."))</p>
+                <p> @group.Description</p>
                 <p> @group.Members.Count users in this group</p>
                 <p> @(group.MaxUserCapacity - group.Members.Count) free spots in this group</p>
                 @Html.ActionLink("View Group →", "Details", "Groups", new { id = group.GroupId }, new { @class = "btn btn-primary" })
