--- a/GroupUp/Views/Manage/Index.cshtml
+++ b/GroupUp/Views/Manage/Index.cshtml
@@ -10,6 +10,16 @@
     <h4>Hesap ayarlarınızı değiştirin</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>Security Level:</dt>
+        <dd>
+            @Model.User.SecurityLevel
+            @if (Model.User.SecurityLevel < 2)
+            {
+                @("[ ")
+                @Html.ActionLink("Increase Security Level", "IncreaseSecurityLevel", "Users")
+                @(" ]")
+            }
+        </dd>
         <dt>Parola:</dt>
         <dd>
             [
