--- a/GroupUp/Views/Groups/CreatorDetails.cshtml
+++ b/GroupUp/Views/Groups/CreatorDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GroupUp.Controllers
 @model GroupUp.ViewModels.GroupDetailsViewModel
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Creator Details";
 }
 
 <h2>Group Details</h2>
@@ -16,25 +16,31 @@ else
     <p>Group Description: @Model.Group.Description</p>
     <p>Group Members:</p>
     @Html.ActionLink("Report Group", "ReportGroup", "Reports", new {groupId = Model.Group.GroupId}, new{@class="btn btn-primary"})
-    <ul>
-        @foreach (var usr in @Model.Group.Members)
+<ul>
+    @foreach (var usr in @Model.Group.Members)
+    {
+        if (usr.UserId != Model.User.UserId)
         {
-            if (usr.UserId != Model.User.UserId)
-            {
-                <li>
-                    @usr.AspNetIdentity.UserName | @Html.ActionLink("View User", "Details", "Users", new { userId = @usr.UserId }, null)
-                    | @Html.ActionLink("Report User", "ReportUser", "Reports", new { userId = usr.UserId }, null)
-                </li>
-            }
-            else
-            {
-                <li>
-                    @usr.AspNetIdentity.UserName
-                </li>
-            }
+            <li>
+                @usr.AspNetIdentity.UserName | @Html.ActionLink("View User", "Details", "Users", new { userId = @usr.UserId }, null)
+                | @Html.ActionLink("Report User", "ReportUser", "Reports", new { userId = usr.UserId }, null)
+            </li>
         }
-    </ul>
+        else
+        {
+            <li>
+                @usr.AspNetIdentity.UserName
+            </li>
+        }
+    }
+</ul>
     <hr />
+    <button class="btn-primary">Edit Group</button>
+    using (@Html.BeginForm("Close", "Groups", new {groupId = Model.Group.GroupId}, FormMethod.Post))
+    {
+        <button type="submit" class="btn btn-primary">Close Group</button>
+    }
+    <hr/>
     <h3>Chat</h3>
     <div style="max-height: 500px; border:1px solid #ccc;overflow:auto;"><pre id="chatbox">@Html.Raw(Model.Group.ChatLog)</pre> </div>
     <input type="text" id="message" />
