--- a/GroupUp/Views/Groups/CreatorDetails.cshtml
+++ b/GroupUp/Views/Groups/CreatorDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GroupUp.Controllers
 @model GroupUp.ViewModels.GroupDetailsViewModel
 @{
-    ViewBag.Title = "Creator Details";
+    ViewBag.Title = "Details";
 }
 
 <h2>Group Details</h2>
