--- a/GroupUp/Views/Groups/Details.cshtml
+++ b/GroupUp/Views/Groups/Details.cshtml
@@ -29,7 +29,8 @@ else
 
     if (Model.Group.Members.Count < Model.Group.MaxUserCapacity
         && !Model.Group.Members.Contains(Model.User)
-        && Model.Group != null && Model.User != null)
+        && Model.Group != null && Model.User != null
+        && Model.User.SecurityLevel < 1)
     {
         using (@Html.BeginForm("Join", "Groups", new {groupId = Model.Group.GroupId}, FormMethod.Post))
         {
