fixed other from issues

--- a/GroupUp/Views/Reports/ReportGroup.cshtml
+++ b/GroupUp/Views/Reports/ReportGroup.cshtml
@@ -6,33 +6,25 @@
 }
 
 <h2>Report Group</h2>
-@if (Model.GroupReport.TargetGroup == null)
-{
-    <p>The group with the given ID does not exist.</p>
-}
-else
-{
+
+@{
     using (Html.BeginForm("PostGroupReport", "Reports", FormMethod.Post))
     {
-        <p>
-            Report for @Html.ActionLink(Model.GroupReport.TargetGroup.Title, "Details", "Groups",
-                           new { groupId = Model.ReportedGroupId }, null)
-        </p>
+        <p>Report for @Html.ActionLink(Model.TargetGroupTitle, "Details", "Groups", new {groupId = Model.ReportedGroupId}, null)</p>
         <div class="form-group">
-            @Html.LabelFor(m => m.GroupReport.Reason)
-            @Html.TextBoxFor(m => m.GroupReport.Reason, new { @class = "form-control"})
-            @Html.ValidationMessageFor(m => m.GroupReport.Reason)
+            @Html.LabelFor(m => m.Reason)
+            @Html.TextBoxFor(m => m.Reason, new { @class = "form-control"})
+            @Html.ValidationMessageFor(m => m.Reason)
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(m => m.GroupReport.DetailedDescription)
-            @Html.TextBoxFor(m => m.GroupReport.DetailedDescription, new { @class = "form-control"})
-            @Html.ValidationMessageFor(m => m.GroupReport.DetailedDescription)
+            @Html.LabelFor(m => m.Description)
+            @Html.TextBoxFor(m => m.Description, new { @class = "form-control"})
+            @Html.ValidationMessageFor(m => m.Description)
         </div>
 
-        @Html.HiddenFor(m => m.GroupReport.TargetGroup);
-        @Html.HiddenFor(m => m.GroupReport.GroupReportId)
         @Html.HiddenFor(m => m.ReportedGroupId)
+        @Html.HiddenFor(m => m.TargetGroupTitle)
         <button class="btn btn-primary" type="submit">SUBMIT REPORT</button>
     }
 }
