--- a/GroupUp/Views/Manage/Index.cshtml
+++ b/GroupUp/Views/Manage/Index.cshtml
@@ -7,9 +7,21 @@
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Hesap ayarlarınızı değiştirin</h4>
+    <h4>Edit your account</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>Username:</dt>
+        <dd>
+            @Model.User.AspNetIdentity.UserName
+        </dd>
+        <dt>Email:</dt>
+        <dd>
+            @Model.User.AspNetIdentity.Email
+        </dd>
+        <dt>Contact Information:</dt>
+        <dd>
+            @Model.User.ContactInfo
+        </dd>
         <dt>Security Level:</dt>
         <dd>
             @Model.User.SecurityLevel
@@ -34,81 +46,87 @@
                 @(" ]")
             }
         </dd>
+        <dt></dt>
+        <dd>
+            @("[ ")
+            @Html.ActionLink("Edit Personal Info", "Edit", "Users")
+            @(" ]")
+        </dd>
     </dl>
     <dl class="dl-horizontal">
-        
-        <dt>Parola:</dt>
+
+        <dt>Password:</dt>
         <dd>
             [
             @if (Model.HasPassword)
             {
-                @Html.ActionLink("Parolanızı değiştirin", "ChangePassword")
+                @Html.ActionLink("Change your password", "ChangePassword")
             }
             else
             {
-                @Html.ActionLink("Oluştur", "SetPassword")
+                @Html.ActionLink("Create password", "SetPassword")
             }
             ]
         </dd>
-        <dt>Dış Oturum Açmalar:</dt>
+        @*<dt>Dış Oturum Açmalar:</dt>
         <dd>
             @Model.Logins.Count [
             @Html.ActionLink("Yönet", "ManageLogins") ]
-        </dd>
+        </dd>*@
         @*
-            Telefon Numaraları, iki öğeli kimlik doğrulama sisteminde ikinci öğe olarak kullanılabilir.
-             
-             Bu ASP.NET uygulamasını SMS kullanarak iki öğeli kimlik doğrulamayı destekleyecek şekilde
-                        ayarlama konusunda ayrıntılı bilgi için <a href="https://go.microsoft.com/fwlink/?LinkId=403804">bu makaleye</a> bakın.
-             
-             İki öğeli kimlik doğrulamayı ayarladıktan sonra aşağıdaki blokları açıklama durumundan çıkarın
+        Telefon Numaraları, iki öğeli kimlik doğrulama sisteminde ikinci öğe olarak kullanılabilir.
+
+         Bu ASP.NET uygulamasını SMS kullanarak iki öğeli kimlik doğrulamayı destekleyecek şekilde
+                    ayarlama konusunda ayrıntılı bilgi için <a href="https://go.microsoft.com/fwlink/?LinkId=403804">bu makaleye</a> bakın.
+
+         İki öğeli kimlik doğrulamayı ayarladıktan sonra aşağıdaki blokları açıklama durumundan çıkarın
         *@
-        @*  
-            <dt>Telefon Numarası:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "Yok")
-                @if (Model.PhoneNumber != null)
+        @*
+        <dt>Telefon Numarası:</dt>
+        <dd>
+            @(Model.PhoneNumber ?? "Yok")
+            @if (Model.PhoneNumber != null)
+            {
+                <br />
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Değiştir", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+                using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    <br />
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Değiştir", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Kaldır" class="btn-link" />]</text>
-                    }
+                    @Html.AntiForgeryToken()
+                    <text>[<input type="submit" value="Kaldır" class="btn-link" />]</text>
                 }
-                else
-                {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Ekle", "AddPhoneNumber")
-                }
-            </dd>
+            }
+            else
+            {
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Ekle", "AddPhoneNumber")
+            }
+        </dd>
         *@
-        <dt>İki Öğeli Kimlik Doğrulama:</dt>
+        @*<dt>İki Öğeli Kimlik Doğrulama:</dt>
         <dd>
             <p>
                 Yapılandırılmış iki öğeli kimlik doğrulama sağlayıcısı yok. Bu ASP.NET uygulamasını iki öğeli kimlik doğrulamayı destekleyecek şekilde ayarlama
                 konusunda ayrıntılı bilgi için <a href="https://go.microsoft.com/fwlink/?LinkId=403804">bu makaleye</a>bakın.
             </p>
-            @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Etkin
-                        <input type="submit" value="Devre Dışı Bırak" class="btn btn-link" />
-                        </text>
-                    }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Devre dışı
-                        <input type="submit" value="Etkinleştir" class="btn btn-link" />
-                        </text>
-                    }
-                }*@
+        *@@*@if (Model.TwoFactor)
+        {
+            using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <text>Etkin
+                <input type="submit" value="Devre Dışı Bırak" class="btn btn-link" />
+                </text>
+            }
+        }
+        else
+        {
+            using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <text>Devre dışı
+                <input type="submit" value="Etkinleştir" class="btn btn-link" />
+                </text>
+            }
+        }*@
         </dd>
     </dl>
 </div>
