--- a/GroupUp/Views/Manage/Index.cshtml
+++ b/GroupUp/Views/Manage/Index.cshtml
@@ -49,7 +49,7 @@
         <dt></dt>
         <dd>
             @("[ ")
-            @Html.ActionLink("Edit Personal Info", "Edit", "Users")
+            @Html.ActionLink("Edit Personal Information", "Edit", "Users")
             @(" ]")
         </dd>
     </dl>
