--- a/GroupUp/Views/Shared/_Layout.cshtml
+++ b/GroupUp/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    @Html.Partial("_Navbar")
+    @Html.Partial("_ModeratorNavbar")
     <div class="container body-content">
         @RenderBody()
         <hr />
