Added User Details and lockout functionality to moderator user views

--- a/GroupUp/Views/Manage/Index.cshtml
+++ b/GroupUp/Views/Manage/Index.cshtml
@@ -57,7 +57,7 @@
             <dt></dt>
             <dd>
                 @("[ ")
-                @Html.ActionLink("Access Moderator Privileges", "Edit", "Users")
+                @Html.ActionLink("Access Moderator Privileges", "Index", "Moderators")
                 @(" ]")
             </dd>
         }
