--- a/GroupUp/Views/Shared/_ModeratorNavbar.cshtml
+++ b/GroupUp/Views/Shared/_ModeratorNavbar.cshtml
@@ -15,6 +15,7 @@
                 <li>@Html.ActionLink("Closed Groups", "UserGroups", "Groups")</li>
                 <li>@Html.ActionLink("User Reports", "UserGroups", "Groups")</li>
                 <li>@Html.ActionLink("Group Reports", "UserGroups", "Groups")</li>
+                <li>@Html.ActionLink("Back to User Mode", "UserGroups", "Groups")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
