--- a/GroupUp/Views/Moderators/Users.cshtml
+++ b/GroupUp/Views/Moderators/Users.cshtml
@@ -10,7 +10,7 @@
     <tr>
         <th>User ID</th>
         <th>Username</th>
-        <th>On Lockout</th>
+        <th>Blocked</th>
         <th>Details</th>
     </tr>
 
