--- a/GroupUp/Views/Shared/_ModeratorNavbar.cshtml
+++ b/GroupUp/Views/Shared/_ModeratorNavbar.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Users", "Requests", "Groups")</li>
+                <li>@Html.ActionLink("Users", "Users", "Moderators")</li>
                 <li>@Html.ActionLink("Groups", "UserGroups", "Groups")</li>
                 <li>@Html.ActionLink("Closed Groups", "UserGroups", "Groups")</li>
                 <li>@Html.ActionLink("User Reports", "UserGroups", "Groups")</li>
