fixed authorization issues, there might still be some of them

--- a/GroupUp/Views/Groups/Details.cshtml
+++ b/GroupUp/Views/Groups/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using GroupUp.Controllers
-@model GroupUp.ViewModels.GroupDetailsViewModel
+﻿@model GroupUp.ViewModels.GroupDetailsViewModel
 @{
     ViewBag.Title = "Details";
 }
@@ -12,9 +11,9 @@
 }
 else
 {
-    <p>Group Title: @Model.Group.Title</p>
-    <p>Group Description: @Model.Group.Description</p>
-    <p>Group Members:</p>
+    <p><strong>Group Title:</strong> @Model.Group.Title</p>
+    <p><strong>Group Description:</strong>  @Model.Group.Description</p>
+    <p><strong>Group Members:</strong></p>
     @Html.ActionLink("Report Group", "ReportGroup", "Reports", new {groupId = Model.Group.GroupId}, new{@class="btn btn-primary"})
     <ul>
         @foreach (var usr in @Model.Group.Members)
@@ -29,8 +28,7 @@ else
 
     if (Model.Group.Members.Count < Model.Group.MaxUserCapacity
         && !Model.Group.Members.Contains(Model.User)
-        && Model.Group != null && Model.User != null
-        && Model.User.SecurityLevel < 1)
+        && Model.User.SecurityLevel >= 1)
     {
         using (@Html.BeginForm("Join", "Groups", new {groupId = Model.Group.GroupId}, FormMethod.Post))
         {
